2001-07-04  Elliot Glaysher  <nuriko.chan@home.com>

	* Netcomics/Factory.pm (new): Added check for $subdir if 
	$separate_comics. [Error in reloading persistant data]

2001-07-02  Elliot Glaysher  <nuriko.chan@home.com>

	* Netcomics/GtkComics.pm (Display_comic): Modified passing the filename
	so as to make sure the $subdir is in the path, if $seperate_comics;
	* Netcomics/HTML.pm (create_webpage): Tried to get rid of as much
	redundant code as possible. Made more things properties of $self.
	(create_webpage_set): Follow the suit of &create_webpage.
	* Netcomics/Factory.pm (get_comics): Fixed RLI storage problem with
	$subdir (on multifile comics, RLIs' 'file' => [ $file ], but in single
	panel comics, RLIs 'file' => [ "$subdir/$file" ];. Fixed so it's always
	[ $file ].
	

2001-06-30  Elliot Glaysher  <nuriko.chan@home.com>

	* Netcomics/HTML.pm: Redid the way templates are loaded as the first
	part of a nice rewrite/restructure of HTML.pm

2001-06-22  Elliot Glaysher  <nuriko.chan@home.com>

	* Comicpage/comicpage.glade: Removed useless tab at top of display.

2001-06-21  Elliot Glaysher  <nuriko.chan@home.com>

	* debian/control: Updated dependencies.

2001-06-20  Elliot Glaysher  <nuriko.chan@home.com>

	* TODO: Removed an old, done entry.
	* Netcomics/GtkComics.pm: Expunged all code from this file. Moved
	code from ./comicpage here. Modified to use Glade to create the
	interface dynamically at runtime. (Hence it now depends upon
	Gtk::GladeXML.
	* Comicpage/comicpage.glade: First interface file commited! GTK+
	interface created at runtime!
	* Netcomics/Config.pm.in: Where the hell did that stray "p" come from?
	
2001-06-13  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* doc/netcomics.pod: Added an example for recreating webpages with
	absolute paths.
	* netcomicsrc: Added the new $webpage_absolute_paths option.
	* Netcomics/HTML.pm (generate_HTML_page): Updated to use the new
	$webpage_absolute_paths option.